--- a/docs/assets/custom/headers.css
+++ b/docs/assets/custom/headers.css
@@ -11,3 +11,10 @@ h3 {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
+
+/*
+code {
+    background-color: #f7f1f1 !important;
+    color: #2094F3 !important;
+}
+*/
